--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,8 @@ services:
     image: redis:7
     container_name: odota-redis
   elasticsearch:
-    image: elasticsearch:latest
+    image: elasticsearch:6.8.23
+    platform: linux/amd64
     container_name: odota-elasticsearch
     environment:
       - cluster.name=docker-cluster
