--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@ services:
     image: redis:7
     container_name: odota-redis
   elasticsearch:
-    image: elasticsearch:6.8.23
-    platform: linux/amd64
+    image: elasticsearch:7.17.0
+    platform: linux/arm64
     container_name: odota-elasticsearch
     environment:
       - cluster.name=docker-cluster
